# super_snoofer

./: Cargo.toml  README.md  simple_test.py  test_super_snoofer.py  zsh_integration.zsh  zsh_integration.zsh.bak
benches/: command_matching.rs
src/: cli.rs  commands.rs  lib.rs  main.rs  ollama.rs  tui.rs
src/cache/: mod.rs
src/command/: mod.rs
src/display/: mod.rs
src/history/: mod.rs
src/shell/: aliases.rs  integration.rs  mod.rs
src/suggestion/: mod.rs
src/tests/: completion_tests.rs  discovery_tests.rs  dynamic_learning_tests.rs  mod.rs  ollama_tests.rs  shell_tests.rs  tui_tests.rs
src/tests/fixtures/: cargo_help.txt  docker_help.txt  git_remote_help.txt  git_submodule_help.txt  npm_help.txt
src/tui/: app.rs  mod.rs
src/utils/: mod.rs
