[package]
name = "super_snoofer"
version = "0.3.0"
edition = "2024"
authors = ["rakki194"]
description = "A fuzzy command finder that suggests similar commands when a typo is made"
license = "MIT"
repository = "https://github.com/rakki194/super_snoofer"
documentation = "https://docs.rs/super_snoofer"
homepage = "https://github.com/rakki194/super_snoofer"
keywords = ["cli", "fuzzy-search", "command-line", "suggestions"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
strsim = "0.11.1"
walkdir = "2.5.0"
which = "7.0.2"
anyhow = "1.0.96"
colored = "3.0.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
once_cell = "1.20.3"
rayon = "1.10.0"
dirs = "6.0.0"
log = "0.4.26"
fancy-regex = "0.14.0"
humantime = "2.1.0"
rand = "0.9.0"
env_logger = "0.11.6"

[dev-dependencies]
tempfile = "3.17.1"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "command_matching"
harness = false
