[package]
name = "super_snoofer"
version = "0.4.1"
edition = "2024"
authors = ["rakki194"]
description = "A fuzzy command finder that suggests similar commands when a typo is made"
license = "MIT"
repository = "https://github.com/rakki194/super_snoofer"
documentation = "https://docs.rs/super_snoofer"
keywords = ["cli", "suggestion", "tui", "llm", "ollama"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.97"
strsim = "0.11.1"
walkdir = "2.5.0"
which = "7.0.2"
colored = "3.0.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
once_cell = "1.20.3"
rayon = "1.10.0"
dirs = "6.0.0"
log = "0.4.26"
fancy-regex = "0.14.0"
humantime = "2.1.0"
rand = "0.9.0"
env_logger = "0.11.6"
chrono = "0.4.40"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.28.1"
tokio = { version = "1.43.0", features = ["full"] }
ollama-rs = "0.2.6"
async-trait = "0.1.87"
futures = "0.3.31"
futures-util = "0.3.31"
clap = { version = "4.5.31", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json", "stream"] }

[dev-dependencies]
tempfile = "3.17.1"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "command_matching"
harness = false
